# mathematica_ids

./: .gitignore  CMakeLists.txt  Makefile  ids.wl  ids_template.nb  parse.py
bin_win32/: ueye_link.bat
bin_win32/Debug/: dlls_loaded.txt
include/: Camera.h  Display.h  MainWindow.h  MathematicaL.h  Worker.h  util.h
src/: Camera.cpp  Display.cpp  MainWindow.cpp  MathematicaL.cpp  Worker.cpp  main.cpp  test_wstp.cpp
